# pydistrib

./: README.md  pyproject.toml
pydistrib/: heartbeat.py  log.py  walog.py
tests/: heartbeat_recv.py  heartbeat_sender.py
