[tool.poetry]
name = "pydistrib"
version = "0.1.0"
description = "Playing around with distributed systems."
authors = ["Tazmilur Saad <ssaad@colgate.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ujson = "^5.9.0"
result = "^0.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"