[tool.poetry]
name = "pydistrib"
version = "0.1.0"
description = "Playing around with distributed systems."
authors = ["Tazmilur Saad <ssaad@colgate.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ujson = "^5.9.0"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"